crates/obj-rs/tests/derive_compile_fail/auto_migrate_missing_default.stderr
error[E0277]: the trait bound `NoDefault: Default` is not satisfied
  --> tests/derive_compile_fail/auto_migrate_missing_default.rs:13:34
   |
13 | #[derive(Serialize, Deserialize, obj::Document)]
   |                                  ^^^^^^^^^^^^^ the trait `Default` is not implemented for `NoDefault`
   |
   = note: this error originates in the derive macro `obj::Document` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NoDefault` with `#[derive(Default)]`
   |
 5 + #[derive(Default)]
 6 | struct NoDefault;
   |
